--- a/doc/design.tex
+++ b/doc/design.tex
@@ -58,7 +58,9 @@ The conversion AG has the following attributes.
 
 The toPicture function is the main worker. It traverses the tree, and calls the \LaTeX\-generating functions which can be found in \emph{CCO.Diag.GeneratePictures}. Most of these functions just generate a bunch of lines and the text for the block, only the \texttt{execute} and \texttt{compile} functions are a bit more interesting, as they need to join two blocks together, although this is accomplished relatively easily using the \emph{size} attribute that each diagram has. 
 
+\section{More details}
 
+For more details, the Haddock should be looked at for the relevant module. The generated docs give much more in-depth information about the code. 
 
 \section{Files}
 
